@@ -24,6 +24,7 @@ import com.ultreon.quantum.client.input.GameInput;
 import com.ultreon.quantum.client.item.ItemRenderer;
 import com.ultreon.quantum.client.model.block.BlockModelRegistry;
 import com.ultreon.quantum.client.model.model.Json5ModelLoader;
+import com.ultreon.quantum.client.particle.ClientParticleRegistry;
 import com.ultreon.quantum.client.registry.LanguageRegistry;
 import com.ultreon.quantum.client.registry.MenuRegistry;
 import com.ultreon.quantum.client.resources.ResourceNotFoundException;
@@ -216,6 +217,9 @@ class QuantumClientLoader implements Runnable {
 
         ClientLifecycleEvents.CLIENT_STARTED.factory().onGameLoaded(client);
 
+        ClientParticleRegistry.registerAll();
+        ClientParticleRegistry.loadAll(client.batches);
+
         client.loading = false;
 
         //*************//
@@ -279,7 +283,7 @@ class QuantumClientLoader implements Runnable {
 
     private void registerLanguage(Identifier id, QuantumClient quantumClient) {
         var s = id.path().split("_", 2);
-        var locale = s.length == 1 ? new Locale(s[0]) : new Locale(s[0], s[1]);
+        var locale = s.length == 1 ? Locale.of(s[0]) : Locale.of(s[0], s[1]);
         LanguageManager.INSTANCE.register(locale, id);
         LanguageManager.INSTANCE.load(locale, id, quantumClient.getResourceManager());
     }
